fullSandbox11072023/force-app/main/default/objects/MANTA_Master__c/MANTA_Master__c.object-meta.xml
<CustomObject>
    <label>MANTA Master</label>
    <nameField>
        <label>MANTA_Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MANTA Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>