fullSandbox11072023/force-app/main/default/objects/MANTA_Master__c/fields/isAdminAccess__c.field-meta.xml
<CustomField>
    <fullName>isAdminAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access</label>
    <type>Checkbox</type>
</CustomField>