fullSandbox11072023/force-app/main/default/objects/MANTA_Master__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MANTA Master</relationshipLabel>
    <relationshipName>MANTA_Master</relationshipName>
    <type>Lookup</type>
</CustomField>