fullSandbox11072023/force-app/main/default/objects/MANTA_Master__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MANTA_Master</relationshipName>
    <type>Lookup</type>
</CustomField>